----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2002-08-04 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_indexes.php3: was corrupting the query displayed in query box
      because it was using $sql_query for local needs. Replaced by $local_query

2002-08-04 Alexander M. Turek  <rabus@users.sourceforge.net>
    * libraries/common.lib.php3, line 88: default language should be
      en-iso-8859-1.
    * libraries/common.lib.php3, libraries/config_import.lib.php3: Backwards
      compatibility for config file revisions before 1.131.
    * config.inc.php3: Display syntax errors when the user calls the config file
      directly even if "display_errors" has been switched off in php.ini.
    * lang/german-*.inc.php3: Updates.
    * lang/afrikaans-*.inc.php3: Tidied up a bit.
    * Documentation.html, ANNOUNCE.txt: We now have 41 languages, don't we?
    * Documentation.html:
      - Beautified XHTML code;
      - Edited my credit;
      - Fixed a typo.
    * tbl_properties.inc.php3: Tried to work around bug #590481 (By default
      radio button for primary key).

2002-08-03 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: remove unneeded GRANT
    * lang/turkish: update, thanks to Bora Alioglu
    * lang/french: update

2002-08-03 Robin Johnson  <robbat2@users.sourceforge.net>
    * lang/*:
        - Strings for SQL Validator
    * config.inc.php3:
        - Config options for SQL Validator
    * libraries/common.lib.php3, sql.php3:
        - SQL Validator usage code
    * libraries/sqlvalidator.class.php3:
        - PHP Class to run SQL Validator
    * libraries/sqlvalidator.php3:
        - SQL Validator interface code
    * ChangeLog:
        - Neatened Changelog to general follow a format
        - (* <filename>: <details>)
    * db_details.php3, db_stats.php3, main.php3, sql.php3
      tbl_change.php3, tbl_query_box.php3, user_details.php3
      libraries/common.lib.php3: