@@ -66,6 +66,11 @@
     don't know anything about most of these languages and then we can't have
     any opinion on grammar issues or bad translations!
 </p>
+<p>
+    All translations listed here are included in this distribution.
+    <span class="redtext">Please don't ask them to send you a translated
+    phpMyAdmin version!</span>
+</p>
 <br />
 
 <table border="1" cellpadding="5" cellspacing="5" align="center">
