@@ -5,6 +5,9 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2002-08-05 Alexander M. Turek  <rabus@users.sourceforge.net>
+    * translators.html: Added a small note in order to avoid annoying emails.
+
 2002-08-04 Marc Delisle  <lem9@users.sourceforge.net>
     * tbl_indexes.php3: was corrupting the query displayed in query box
       because it was using $sql_query for local needs. Replaced by $local_query
